static/css/style.css
/*
Colours:
  Main Brand Colour (Sap Green)  : #3F7D20 : rgb(63,125,32)
  Accent Colour (Plum purple)    : #8E4585 : rgb(142,69,133)
  Background Colour (Honeydew)   : #F3FCF0 : rgb(243,252,240)
  Main text colour (Rich Black)  : #0D0A0B : rgb(13,10,11)
*/
/*
 * Global styles
 */
body, html {
  background-color: #F3FCF0;
  color: #0D0A0B;
  font-family: 'Roboto', sans-serif;
}
 /*Forces body to full height so footer can be positioned to bottom*/
body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}
main {
  display: flex;
  flex: 1 0 auto;
  flex-flow: column nowrap;
}
/* Ensures there's a little space between the content and the header and footer.
   Scales to screen size so small screens don't have a lot of wasted space. */
.vpad {
  margin-top: 5vh;
  margin-bottom: 5vh;
}
h1, h2, h3, h4, h5, h6 {
  color: #0D0A0B;
  font-family: 'Open Sans', sans-serif;
}
hr.section-divider {
  border: 0;
  height: 1px;
  background-image: linear-gradient(to right, rgba(142,69,133,0), rgba(142,69,133,1), rgba(142,69,133,0));
}
.section-header {
  color: #3F7D20;
}
.btn-small,
.btn-large {
  color: #F3FCF0;
  background-color: #3F7D20;
}
.btn-small:hover,
.btn-large:hover,
.btn-small:focus,
.btn-large:focus {
  background-color: #63A344;
}
.btn-plum {
  color: #F3FCF0;
  background-color: #8E4585;
}
.btn-plum:hover,
.btn-plum:focus {
  background-color: #9F54B0;
}
.select-dropdown {
  max-height: 50vh;
}
/* Changes materialize input fields to brand colours */
.input-field .prefix.active,
.input-field textarea.materialize-textarea:focus:not([readonly]) + label,
.input-field input[type="text"]:not(.browser-default):focus:not([readonly]) + label,
.input-field input[type="email"]:not(.browser-default):focus:not([readonly]) + label,
.input-field input[type="number"]:not(.browser-default):focus:not([readonly]) + label,
.input-field input[type="password"]:not(.browser-default):focus:not([readonly]) + label {
  color: #8E4585;
}
ul.dropdown-content.select-dropdown li span {
  color: #0D0A0B;
}
.input-field input[type="text"]:not(.browser-default):focus,
.input-field input[type="email"]:not(.browser-default):focus,
.input-field input[type="number"]:not(.browser-default):focus,
.input-field input[type="password"]:not(.browser-default):focus,
.input-field textarea.materialize-textarea:focus:not([readonly]) {
  border-bottom: 1px solid #8E4585;
  box-shadow: 0 1px 0 0 #8E4585;
}
/*
 * Header and Navigation
 */
.brand-icon {
  width: 50px;
  height: 50px;
  background-image: url("../images/plum.svg");
  background-repeat: no-repeat;
  background-position: center;
}
.brand-title {
  color: #3F7D20;
  padding: 0;
  margin: 0;
}
nav .nav-wrapper {
  background-color: #F3FCF0;
  color: #3F7D20;
  border-bottom: solid 2px #8E4585; /*#3F7D20;*/
  font-family: 'Open Sans', sans-serif;
}
nav ul li a {
  color: #3F7D20;
}
.user-dropdown {
  background-color: #F3FCF0;
}
ul.user-dropdown li > a {
  color: #3F7D20;
}
.sidenav-trigger {
  color: #3F7D20;
}
.sidenav {
  background-color: #F3FCF0;
  font-family: 'Open Sans', sans-serif;
}
.sidenav .collapsible-header,
.sidenav .collapsible-body {
  padding: 0 32px;
  background-color: transparent;
}
/*
 * Flash messages
 */
.flash-message-list {
  position: fixed;
  width: 90vw;
  top: 60px;
  left: 50%;
  transform: translateX(-50%);
  margin: 0;
  z-index: 1;
}
.flash-message {
  display: flex;
  align-items: center;
  background-color: white;
  border-radius: 5px;
  box-shadow: 0 0 5px #0D0A0B;
  margin: 0 0 10px 0;
  overflow: hidden;
  animation: grow 0.5s;
}
.flash-message:first-child {
  padding-top: 5px;
}
@keyframes grow {
  from {
    height: 0;
  }
  to {
    height: 45px;
  }
}
.error {
  color: #A94442;
  background-color: #F2DEDE;
  border: 1px solid #A94442;
}
.warning {
  color: #8A6D3B;
  background-color: #FCF8E3;
  border: 1px solid #8A6D3B;
}
.success {
  color: #3C763D;
  background-color: #DFF0D8;
  border: 1px solid #3C763D;
}
.info {
  color: #31708F;
  background-color: #D9EDF7;
  border: 1px solid #31708F;
}
.flash-icon {
  display: flex;
  border-radius: 5px 0 0 5px;
  background-color: white;
}
.flash-icon i {
  font-size: 40px;
}
.flash-content {
  display: flex;
  flex-grow: 1;
  text-align: center;
  justify-content: center;
}
.flash-close {
  display: flex;
  cursor: pointer;
  align-items: center;
  margin: 5px;
}
.flash-close:hover {
  border-radius: 50%;
  box-shadow: 0 0 5px #0D0A0B;
}
.flash-close i {
  font-size: 25px;
}
.error .flash-close {
  color: #A94442;
}
.warning .flash-close {
  color: #8A6D3B;
}
.success .flash-close {
  color: #3C763D;
}
.info .flash-close {
  color: #31708F;
}
/*
 * Tabs
 */
/* Styles materialize tabs */
.plum-tabs .tab a {
  color: rgba(63,125,32,0.7);
  background-color: white;
}
.plum-tabs .tab a:hover {
  font-weight: bold;
  color: #3F7D20;
}
.plum-tabs .tab a.active,
.plum-tabs .tab a:focus.active {
  color: #3F7D20;
  font-weight: bold;
  background-color: white;
}
.plum-tabs .indicator {
  background-color: #8E4585;
}
/*
 * Recipe cards
 */
.card {
  background-color: #F3FCF0;
}
.card .card-content {
  padding: 10px;
}
.card-title {
  color: #3F7D20;
  font-family: 'Open Sans', sans-serif;
}
/*The following styles force card and recipe header images to be square and have
  their final size on load. This prevents layout changes as images load in.*/
.card .card-image,
.card-panel.card-image,
.col.recipe-header-img {
  position: relative;
  padding: 0;
}
.card .card-image::after,
.card-panel.card-image::after,
.col.recipe-header-img::after {
  content: "";
  display: block;
  padding-bottom: 100%;
}
.card .card-image img,
.card-panel.card-image > img,
.recipe-header-img > img {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
  background-color: #8E4585;
}
/*Makes the card-title only 2 lines high and hides any overflow*/
.card-title {
  position: relative;
  line-height: 1em;
  height: 2.8em;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 20px;
  color: #8E4585;
}
/* Shows any hidden title text on hover */
.card-title:hover {
  overflow: visible;
}
.card-title:hover::after {
  content: attr(data-expand);
  position: absolute;
  background-color: #F3FCF0;
  overflow: visible;
  top: 0;
  left: 0;
}
/*
 * Icons tiles
 */
.item-tile {
  box-shadow: 1px 1px 5px #0D0A0B;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  overflow: hidden;
}
.tile-image {
  position: relative;
  object-fit: cover;
  height: 100%;
  width: 100%;
}
/* Adds a dark gradient to the bottom of the
   icon to make the title easier to read */
.tile-overlay {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-image: linear-gradient(rgba(13,10,11,0.0) 25%, #0D0A0B 100%);
}
.tile-title {
  position: absolute;
  left: 0;
  bottom: 0;
  right: 0;
  padding: 10px;
  white-space: normal;
}
/*
 * User profile page
 */
.recipe-tile {
  position: relative;
  height: 200px;
  width: 200px;
}
.recipe-tile .tile-title {
  color: #F3FCF0;
  font-size: 20px;
}
/*
 * Footer
 */
footer {
  background-color: #3F7D20;
  color: #F3FCF0;
}
/*
 * Custom controls
 */
/*
 * Star rating
 */
/* Makes the star rating horizontal */
.star-rating,
.star-rating-ctl {
  display: inline-block;
  list-style-type: none;
  margin: 0;
  padding: 0;
}
.star-rating > .rating-text,
.star-rating > .star {
  float: left;
  white-space: nowrap;
}
/* In order for CSS hover and checked styles to apply to the correct stars
   the order has to be visually reversed as the ~ sibling selector only works
   forwards, but we need it to work backwards. */
.star-rating-ctl > .star {
  float: right;
}
.star i,
.rating-text {
  color: #8E4585;
}
/* Makes unchecked stars display an empty star icon */
.star-rating > .star.off i::after,
.star-rating-ctl > .star i::after {
  content: "star_border";
}
/* Stars set to half show a half filled star */
.star-rating > .star.half i::after {
  content: "star_half";
}
/* Shows a fully checked star if a star is set on, or when a star is hovered,
  a following sibling is hovered or a following checkbox is checked */
.star-rating > .star.on i::after,
.star-rating-ctl > .star:hover > i::after,
.star-rating-ctl > .star:hover ~ .star > i::after,
.star-rating-ctl:not(:hover) > input[type="radio"]:checked ~ .star > i::after {
  content: "star";
}
/* Prevents the star control recieving hover events if it's set to disabled */
.star-rating-ctl.disabled,
.star-rating-ctl.disabled .star {
  pointer-events: none;
  opacity: 0.75;
}
/* Gives a focus hint for accessibility */
.star-rating-ctl input[type="radio"]:focus + .star > i {
  /*border-radius: 50%;
  border: 1px solid #8E4585;
  margin: -1px;
  box-shadow: 0 0 5px #0D0A0B;*/
  color: #9F54B0;
  border: transparent;
}
.star-rating-ctl .star:focus {
  outline: none;
  border: none;
}
/*
 * Horizontal item scroller
 */
.scroller,
.col.scroller {
  position: relative;
  overflow: hidden;
  padding: 0 25px;
}
ul.scroller-items {
  list-style-type: none;
  overflow: hidden; /*scroll;*/
  white-space: nowrap;
  font-size: 0;
  padding: 0;
}
li.scroll-item {
  font-size: 1rem;
  display: inline-block;
  text-align: center;
  padding: 10px;
}
.scroll-item-bookend {
  font-size: 1rem;
  display: inline-block;
  text-align: center;
  width: 25px;
}
.scroller .scroll-left {
  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
}
.scroller .scroll-right {
  position: absolute;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
}
/*
 * Media Queries
 */
/* Stops recipe tiles getting larger than the scroller bounds,
   which leads to some problems with scrolling */
@media only screen and (max-width: 360px) {
  .recipe-tile {
    height: 150px;
    width: 150px;
  }
}
/* Large screens and up */
@media only screen and (min-width: 992px) {
  /* Makes header content vertically centred when header
     image and text are side-by side */
  .recipe-header {
      display: flex;
      align-items: center;
  }
  /* prevents overflowing header when image
     and title are side by side */
  .recipe-header-sub {
    margin: 0;
  }
}

